--- a/.gitattributes
+++ b/.gitattributes
@@ -22,3 +22,5 @@ third_party/acados/*/t_renderer filter=lfs diff=lfs merge=lfs -text
 third_party/qt5/larch64/bin/lrelease filter=lfs diff=lfs merge=lfs -text
 third_party/qt5/larch64/bin/lupdate filter=lfs diff=lfs merge=lfs -text
 third_party/catch2/include/catch2/catch.hpp filter=lfs diff=lfs merge=lfs -text
+third_party/libspatialindex/*/lib/libspatialindex*.so -filter=lfs -merge -text
+third_party/libspatialindex/*/lib/libspatialindex*.so.* -filter=lfs -merge -text
